--- a/movie_finder/static/css/style.css
+++ b/movie_finder/static/css/style.css
@@ -1,3 +1,13 @@
 h1 {
-    color: peru;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.logo {
+    width: 40px;
+    height: auto;
+}
+
+label {
+    margin-top: 16px;
 }
