--- a/movie_finder/templates/index.html
+++ b/movie_finder/templates/index.html
@@ -6,11 +6,22 @@
 
 
 {% block content %}
-    <h1>Movie finder 2</h1>
+    <h1>Movie finder</h1>
 
-    {% for movie in movies %}
-        {{ movie.title }}
-        {{ movie.description }}
+    <div class="row">
 
-    {% endfor %}
+        {% for movie in movies %}
+            <div class="col-sm-6">
+                <div class="card">
+                    {#            <img src="..." class="card-img-top" alt="...">#}
+                    <div class="card-body">
+                        <h5 class="card-title">{{ movie.title }}</h5>
+                        <p class="card-text">{{ movie.description }}</p>
+                        <a href="#" class="btn btn-primary">View more</a>
+                    </div>
+                </div>
+            </div>
+
+        {% endfor %}
+    </div>
 {% endblock %}
