finder and product view, upload images

--- a/movie_finder/templates/add_movie.html
+++ b/movie_finder/templates/add_movie.html
@@ -3,12 +3,12 @@
 
 {% block content %}
 
-    <form action="{{ url_for('movie.add_movie') }}" method="POST">
+    <form action="{{ url_for('movie.add_movie') }}" method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
 
         {% for error in form.errors %}
             <div class="alert alert-danger" role="alert">
-                {{ error }}
+                <b>{{ error | capitalize }}</b> {{ form.errors[error] }}
             </div>
 
         {% endfor %}
