--- a/movie_finder/templates/index.html
+++ b/movie_finder/templates/index.html
@@ -9,19 +9,58 @@
     <h1>Movie finder</h1>
 
     <div class="row">
+        <div class="col-8">
+            <div class="row">
+                {% for movie in movies %}
+                    <div class="col-sm-6 mb-5">
+                        <div class="card">
 
-        {% for movie in movies %}
-            <div class="col-sm-6">
-                <div class="card">
-                    {#            <img src="..." class="card-img-top" alt="...">#}
-                    <div class="card-body">
-                        <h5 class="card-title">{{ movie.title }}</h5>
-                        <p class="card-text">{{ movie.description }}</p>
-                        <a href="#" class="btn btn-primary">View more</a>
+                            <img src="
+
+
+
+
+                                    {% if movie.image %}{{ url_for('main.uploads', filename=movie.image) }} {% else %} {{ url_for('static', filename='images/placeholder.jpeg') }} {% endif %}"
+                                 class="card-img-top" alt="...">
+
+                            <div class="card-body">
+                                <h5 class="card-title">{{ movie.title }}</h5>
+                                <p class="card-text">{{ movie.description }}</p>
+                                <a href="{{ url_for('movie.movie', movie_id=movie.id) }}" class="btn btn-primary">View
+                                    more</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
 
-        {% endfor %}
+                {% endfor %}
+            </div>
+        </div>
+        <div class="col-4">
+            <form action="" method="GET">
+                {{ form.hidden_tag() }}
+
+                {% for error in form.errors %}
+                    <div class="alert alert-danger" role="alert">
+                        <b>{{ error | capitalize }}</b> {{ form.errors[error] }}
+                    </div>
+
+                {% endfor %}
+
+                <div class="form-group">
+                    {{ form.title.label }}
+                    {{ form.title(class="form-control") }}
+                </div>
+                <div class="form-group">
+                    {{ form.duration.label }}
+                    {{ form.duration(class="form-control") }}
+                </div>
+                <hr>
+                <div class="form-group">
+                    {{ form.submit(class="btn btn-primary form-control") }}
+                </div>
+            </form>
+        </div>
+
+
     </div>
 {% endblock %}
